# reqc

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  reqc.py  stdd.py
docs/: Design.md  Implementation.md  Requirements.md
tests/: test_argparser.py  test_docrequirementextractor.py  test_duplicatechecker.py  test_main.py  test_markdownparser.py  test_reportgenerator.py  test_requirementmatcher.py  test_targetrequirementextractor.py  test_testrequirementextractor.py
