[project]
name = "stdd"
version = "0.1.0"
description = "Spec Test Driven Development - cross-reference doc requirements against tests"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stdd = "stdd:main_cli"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]