[project]
name = "reqc"
version = "0.1.0"
description = "Requirements coverage audit - cross-reference doc requirements against targets"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
reqc = "reqc:main_cli"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]